--- a/erp_mes/src/main/resources/templates/business/order.html
+++ b/erp_mes/src/main/resources/templates/business/order.html
@@ -36,7 +36,7 @@
                                     		<option value="RECEIVED">등록</option>
                                     		<option value="PREPARING">납품 대기</option>
                                     		<option value="DELIVERED">납품 완료</option>
-                                    		<option value="CANCLEED">취소</option>
+                                    		<option value="CANCELED">취소</option>
                                 		</select>
                                 	</div>
                                 	<div class="d-flex align-items-center gap-2">
@@ -70,7 +70,7 @@
 		<div class="modal-dialog modal-xl modal-dialog-centered">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title" id="orderAddModalLabel">수주 등록</h5>
+					<h5 class="modal-title" id="orderModalTitle">수주 등록</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
@@ -115,7 +115,7 @@
 
 						<div class="modal-footer d-flex justify-content-end">
 							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-							<button type="submit" class="btn btn-success">등록</button>
+							<button type="submit" class="btn btn-success" id="orderSubmitBtn">등록</button>
 						</div>
 					</form>
 				</div>
