품질이력관리 검사대기 리스트 수정중

--- a/erp_mes/src/main/resources/templates/qc/iqc.html
+++ b/erp_mes/src/main/resources/templates/qc/iqc.html
@@ -153,7 +153,7 @@
 				        { header: '제품명', name: 'productName' },
 				        { header: '공정ID', name: 'processId' },
 				        { header: '작업자ID', name: 'empId' },
-				        { header: '수량', name: 'quntity' },
+				        { header: '수량', name: 'planQuantity' },
 				        { header: 'LOT번호', name: 'lotId' },
 				        { header: '작업상태', name: 'workOrderStatus' }
 					]
