--- a/erp_mes/src/main/resources/templates/gw/docWrite.html
+++ b/erp_mes/src/main/resources/templates/gw/docWrite.html
@@ -6,7 +6,6 @@
 <!--summernote  css-->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 <link href="https://cdn.jsdelivr.net/npm/summernote@0.9.0/dist/summernote-bs4.min.css" rel="stylesheet">
-
 <!--summernote  css-->
 
 </head>
@@ -34,7 +33,7 @@
 							<label for="templateSelector2">문서 양식 선택</label>
 							<select class="form-control" th:field="*{reqType}">
 								<option 
-										th:each="reqType : ${T(com.erp_mes.erpapproval.constant.ApprReqType).values()}"
+										th:each="reqType : ${reqTypes}"
 										th:value="${reqType}"
 										th:text="${reqType.label}"
 										>
