--- a/erp_mes/src/main/resources/templates/fragments/header.html
+++ b/erp_mes/src/main/resources/templates/fragments/header.html
@@ -162,7 +162,7 @@
 						<a class="collapse-item" th:href="@{/plant/equipment}">설비관리</a>
 						<a class="collapse-item" th:href="@{/plant/process}">공정관리</a>
 						<a class="collapse-item" th:href="@{/inventory/material}">자재(부품) 정보</a>
-						<a class="collapse-item" th:href="@{/inventory/item}">제품(완/반) 정보</a>
+<!-- 						<a class="collapse-item" th:href="@{/inventory/item}">제품(완/반) 정보</a> -->
 						<a class="collapse-item" th:href="@{/inventory/ware}">창고 정보</a>
 					</div>
 				</div></li>
